--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -14,6 +14,10 @@
         <li class="nav-item"><a class="nav-link" href="/events">All Events</a> </li>
         <li  class="nav-item"><a class="nav-link" href="/events/create">Create Events</a> </li>
         <li  class="nav-item"><a class="nav-link" href="/events/delete">Delete Events</a> </li>
+        <li  class="nav-item"><a class="nav-link" href="/eventCategories/create">Create EventCategory</a> </li>
+        <li  class="nav-item"><a class="nav-link" href="/eventCategories">All EventCategories</a> </li>
+        <li  class="nav-item"><a class="nav-link" href="/tags">All Tags</a> </li>
+        <li  class="nav-item"><a class="nav-link" href="/tags/create">Create Tag</a> </li>
     </ul>
 </nav>
 
